Fixing overflow

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@ html, body {
 
 .wrapper {
   position: relative;
-  max-width: 100%;
   margin: 0 auto;
   overflow: hidden;
 }
